--- a/app/src/main/res/layout/activity_after_class_news.xml
+++ b/app/src/main/res/layout/activity_after_class_news.xml
@@ -41,9 +41,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginBottom="20px"
-                android:layout_marginLeft="20px"
-                android:layout_marginRight="20px"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:textColor="?attr/textOrIcon"
                 android:textSize="50px" />
 
