--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -48,8 +48,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="48px"
-                    android:layout_marginRight="48px"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginRight="22dp"
                     android:layout_marginTop="8px"
                     android:fitsSystemWindows="true"
                     android:text="这是我校从2013年开始，连续4年组织开展的教学质量目标测。学校通过全面实施教学质量目标测试，来提高人才培养质量。"
@@ -60,10 +60,10 @@
                     android:id="@+id/id_news_content_author_time__actv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="22px"
-                    android:layout_marginLeft="48px"
-                    android:layout_marginRight="48px"
-                    android:layout_marginTop="12px"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginRight="22dp"
+                    android:layout_marginTop="10dp"
                     android:fitsSystemWindows="true"
                     android:text="1321312"
                     android:textColor="?attr/textOrIcon"
