--- a/app/src/main/res/layout/item_daily_text_image.xml
+++ b/app/src/main/res/layout/item_daily_text_image.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.csmy.minyuanplus.ui.view.AutoCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
@@ -21,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="7"
-            android:padding="30px"
+            android:padding="12dp"
             android:text="蒋晓明参加全国高职高专院校思想政治理论课建设联盟会议"
             android:textColor="?attr/textPrimary"
             android:textSize="52px" />
@@ -31,7 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_weight="3"
-            android:padding="30px" />
+            android:padding="12dp" />
 
 
     </LinearLayout>
