--- a/app/src/main/res/layout/item_schedule_vertical.xml
+++ b/app/src/main/res/layout/item_schedule_vertical.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
     android:gravity="center"
-    android:text="6"
-    android:textColor="?attr/textPrimary" />
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="6"
+        android:textColor="?attr/textPrimary"
+        android:textSize="50px" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="6"
+        android:textColor="?attr/textSecond"
+        android:textSize="30px" />
+
+
+</LinearLayout>
+
+
 
 
