--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -14,39 +14,33 @@
         app:elevation="0dp">
         <include layout="@layout/tool_bar" />
 
-        <com.csmy.minyuanplus.ui.view.CustomImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            app:src="@mipmap/icon" />
-
-        <android.support.v7.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginBottom="20dp"
-            android:layout_marginTop="10dp"
-            android:text="@string/app_name"
-            android:textColor="?attr/textPrimary"
-            android:textSize="55px" />
+            app:placeholderImage="@mipmap/icon" />
+
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:orientation="vertical">
 
 
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="44px"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:text="@string/preference_setting"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="50px" />
@@ -60,7 +54,8 @@
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="44px"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:text="@string/basic_setting"
                 android:textColor="?attr/colorPrimaryDark"
                 android:textSize="50px" />
@@ -69,6 +64,18 @@
                 android:id="@+id/id_setting_basic_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/id_setting_quit_account_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="88px"
+                android:gravity="center"
+                android:text="@string/quit_account"
+                android:textColor="@color/red"
+                android:textSize="50px" />
 
 
         </LinearLayout>
