--- a/app/src/main/res/layout/fragment_grade.xml
+++ b/app/src/main/res/layout/fragment_grade.xml
@@ -4,6 +4,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/id_grade_ll"
+    android:background="?attr/colorPrimaryBg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
