--- a/app/src/main/res/layout/item_setting_text.xml
+++ b/app/src/main/res/layout/item_setting_text.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_margin="50px"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.AppCompatTextView
