--- a/app/src/main/res/layout/item_setting_text_switch.xml
+++ b/app/src/main/res/layout/item_setting_text_switch.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="50px"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     android:orientation="horizontal">
 
     <LinearLayout
