--- a/app/src/main/res/layout/item_user_info.xml
+++ b/app/src/main/res/layout/item_user_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_margin="25px"
+    android:layout_margin="10dp"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.AppCompatTextView
@@ -16,7 +16,7 @@
         android:id="@+id/id_user_info_content_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25px"
+        android:layout_marginTop="10dp"
         android:textSize="44px"
         android:textColor="?attr/textSecond"
         />
