--- a/app/src/main/res/layout/view_download_progress_bar.xml
+++ b/app/src/main/res/layout/view_download_progress_bar.xml
@@ -11,7 +11,7 @@
         android:layout_weight="8"
         android:layout_height="wrap_content"
         android:max="100"/>
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/id_about_progress_tv"
         android:layout_width="0dp"
         android:layout_weight="2"
