--- a/app/src/main/res/layout/item_news_content_text.xml
+++ b/app/src/main/res/layout/item_news_content_text.xml
@@ -4,8 +4,9 @@
     android:id="@+id/id_news_text"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="50px"
-    android:layout_marginRight="50px"
-    android:layout_marginTop="50px"
+    android:layout_marginLeft="12dp"
+    android:layout_marginRight="12dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:textColor="?attr/textPrimary"
     android:textSize="54px" />
