--- a/app/src/main/res/drawable/circle_red.xml
+++ b/app/src/main/res/drawable/circle_red.xml
@@ -4,10 +4,11 @@
 
     <corners android:radius="10dp" />
 
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="?attr/colorAccent" />
 
-    <size
-        android:width="20dp"
-        android:height="20dp" />
+    <!--<size-->
+        <!--android:width="100dp"-->
+        <!--android:height="100dp" />-->
+
 
 </shape>
