--- a/app/src/main/res/layout/activity_notify_content.xml
+++ b/app/src/main/res/layout/activity_notify_content.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,6 +11,25 @@
         android:id="@+id/id_notify_content_tv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
+        android:layout_below="@+id/id_base_tool_bar_layout"
         android:layout_margin="15dp" />
 
-</LinearLayout>
+    <WebView
+        android:id="@+id/id_notify_content_wv"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_below="@+id/id_base_tool_bar_layout"
+        android:layout_height="match_parent" />
+
+    <com.github.rahatarmanahmed.cpv.CircularProgressView
+        android:id="@+id/id_notify_content_progress_view"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:cpv_animAutostart="false"
+        android:layout_centerInParent="true"
+        app:cpv_color="?attr/colorAccent"
+        app:cpv_indeterminate="true" />
+
+
+</RelativeLayout>
