--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/id_schedule_toolbar_ll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+    <!--<LinearLayout-->
+        <!--android:id="@+id/id_schedule_toolbar_ll"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentTop="true">-->
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -33,87 +34,90 @@
 
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/id_schedule_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="100px"
-        android:layout_below="@+id/id_schedule_toolbar_ll"
-        android:layout_marginBottom="1px"
-        android:background="?attr/colorPrimaryBg">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <include layout="@layout/item_schedule_head" />
-
-            <include layout="@layout/item_schedule_horizontal" />
-
-            <include layout="@layout/item_schedule_horizontal" />
-
-            <include layout="@layout/item_schedule_horizontal" />
-
-            <include layout="@layout/item_schedule_horizontal" />
-
-            <include layout="@layout/item_schedule_horizontal" />
-
-            <include layout="@layout/item_schedule_horizontal" />
-
-            <include layout="@layout/item_schedule_horizontal" />
-        </LinearLayout>
-
-    </LinearLayout>
-
+    <!--</LinearLayout>-->
 
     <LinearLayout
-        android:id="@+id/id_schedule_vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/id_schedule_horizontal"
-        android:background="?attr/colorPrimaryBg">
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/id_schedule_horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:orientation="horizontal">
+            android:layout_height="100px"
+            android:layout_marginBottom="1px"
+            android:background="?attr/colorPrimaryBg">
 
             <LinearLayout
-                android:layout_width="130px"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <include layout="@layout/item_schedule_vertical" />
+                <include layout="@layout/item_schedule_head" />
 
-                <include layout="@layout/item_schedule_vertical" />
+                <include layout="@layout/item_schedule_horizontal" />
 
-                <include layout="@layout/item_schedule_vertical" />
+                <include layout="@layout/item_schedule_horizontal" />
 
-                <include layout="@layout/item_schedule_vertical" />
+                <include layout="@layout/item_schedule_horizontal" />
 
-                <include layout="@layout/item_schedule_vertical" />
+                <include layout="@layout/item_schedule_horizontal" />
 
-                <include layout="@layout/item_schedule_vertical" />
+                <include layout="@layout/item_schedule_horizontal" />
 
-                <include layout="@layout/item_schedule_vertical" />
+                <include layout="@layout/item_schedule_horizontal" />
 
-                <include layout="@layout/item_schedule_vertical" />
-
-                <include layout="@layout/item_schedule_vertical" />
-
-                <include layout="@layout/item_schedule_vertical" />
+                <include layout="@layout/item_schedule_horizontal" />
             </LinearLayout>
 
-            <com.csmy.minyuanplus.ui.view.CourseLayout
-                android:id="@+id/id_course_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
         </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/id_schedule_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?attr/colorPrimaryBg">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="130px"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/item_schedule_vertical" />
+
+                    <include layout="@layout/item_schedule_vertical" />
+
+                    <include layout="@layout/item_schedule_vertical" />
+
+                    <include layout="@layout/item_schedule_vertical" />
+
+                    <include layout="@layout/item_schedule_vertical" />
+
+                    <include layout="@layout/item_schedule_vertical" />
+
+                    <include layout="@layout/item_schedule_vertical" />
+
+                    <include layout="@layout/item_schedule_vertical" />
+
+                    <include layout="@layout/item_schedule_vertical" />
+
+                    <include layout="@layout/item_schedule_vertical" />
+                </LinearLayout>
+
+                <com.csmy.minyuanplus.ui.view.CourseLayout
+                    android:id="@+id/id_course_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
+        </LinearLayout>
+
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
