--- a/app/src/main/res/layout/item_news_content_image.xml
+++ b/app/src/main/res/layout/item_news_content_image.xml
@@ -5,7 +5,8 @@
     android:id="@+id/id_news_image"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="25dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
     fresco:failureImage="@mipmap/failure"
     fresco:progressBarAutoRotateInterval="3000"
     fresco:progressBarImage="@mipmap/progress_bar"
